tests/compile_fail/derive_unknown_scheduler_attr.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad", bogus = "value")]
#[allow(dead_code)]
enum UnknownAttrFlag {}

fn main() {}
